# CropSense-Face-Detection-cpp

./: .clangd  .gitignore  CMakeLists.txt  CMakelist.txt  README.md
.github/workflows/: .python-tests.yml.kate-swp  cpp-build.yml  python-tests.yml  ubuntu-build.yml  window-build.yml
src/: config.h  config.json  crop_config.h  image_processing.cpp  image_processing.h  main.cpp  user_input.cpp  user_input.h
